Fix landscape layout on iOS 8 iPad

--- a/src/styl/consent.styl
+++ b/src/styl/consent.styl
@@ -69,10 +69,6 @@
       height: 100%;
     }
 
-    #consent-my-choices {
-      padding-bottom: 6 * $default-size;
-    }
-
     .agree {
       flex-grow: 0;
     }
@@ -228,8 +224,8 @@
   }
 
   .privacy-container {
-    padding-bottom: 5 * $default-size;
     #privacy-row-item-container {
+      padding-bottom: 6 * $default-size;
       .row-item {
         margin: 0 0 0 0;
         padding: $default-size 0;
